--- a/src/assets/icons/fontello/config.json
+++ b/src/assets/icons/fontello/config.json
@@ -65,6 +65,12 @@
       "css": "minus",
       "code": 59392,
       "src": "fontawesome"
+    },
+    {
+      "uid": "9dd9e835aebe1060ba7190ad2b2ed951",
+      "css": "search",
+      "code": 59397,
+      "src": "fontawesome"
     }
   ]
 }
