--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "angularx-social-login": "^1.1.3",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.2",
+    "rxjs-compat": "6.0.0",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
